# OpenChmod

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  pr-size.yml  publish.yml
chmod/: __init__.py  cli.py  core.py
tests/: test_openchmod.py
