# SPDX-License-Identifier: Apache-2.0
# Copyright (c) 2026 Junbo Zheng

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openchmod"
version = "0.0.1"
description = "Recursively chmod directories, files, and executables with sensible defaults."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "Junbo Zheng", email = "junbo.zheng@outlook.com" },
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "build",
    "twine",
]

[project.scripts]
pychmod = "chmod.cli:main"

[project.urls]
Homepage = "https://github.com/Junbo-Zheng/OpenChmod"
Issues = "https://github.com/Junbo-Zheng/OpenChmod/issues"

[tool.hatch.build.targets.wheel]
packages = ["chmod"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
